--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +17,10 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.0",
-    "nodemon": "^2.0.18",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
